.circleci/aws_config/networkinfrastructure.yml
Description:
    Richard Kamgang,
    Infrastructure réseau d'entrainement CI/CD.

Parameters:

    EnvironmentName:
        Description: Nom de l'environnement de travail qui précédera les noms desressources
        Type: String
        Default: CI/CD TRAINING

    VpcCIDR: 
        Description: L'adresse IP du réseau virtuel VPC
        Type: String
        Default: 10.0.0.0/16

    PublicSubnetCIDR:
        Description: L'adresse IP du sous-réseau publique de l'infrastructure
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnetCIDR:
        Description: L'adresse IP du sous-réseau publique de l'infrastructure
        Type: String
        Default: 10.0.2.0/24

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} InternetGateway
    
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PublicSubnetCIDR
            MapPublicIpOnLaunch: "true"
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production PublicSubnet

    PrivateSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PrivateSubnetCIDR
            MapPublicIpOnLaunch: "true"
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production PrivateSubnet

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} PublicRouteTable
    PublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet

    PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} PrivateRouteTable

    PrivateSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
          RouteTableId: !Ref PrivateRouteTable
          SubnetId: !Ref PrivateSubnet

    PrivateRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

Outputs:
    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
          Name: VPCID # !Sub ${EnvironmentName}-VPCID

    PrivateSubnet:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref PrivateSubnet
        Export:
          Name: PRIV-SN #!Sub ${EnvironmentName}-PRIV-SN

    PublicSubnet:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref PublicSubnet
        Export:
          Name: PUB-SN #!Sub ${EnvironmentName}-PUB-SN
