.circleci/aws_config/template.yml
Description:
    Richard Kamgang,
    Infrastructure réseau d'entrainement CI/CD.

Parameters:

    EnvironmentName:
        Description: Nom de l'environnement de travail qui précédera les noms desressources
        Type: String
        Default: CI/CD TRAINING

    VpcCIDR: 
        Description: L'adresse IP du réseau virtuel VPC
        Type: String
        Default: 10.0.0.0/16

    PublicSubnetCIDR:
        Description: L'adresse IP du sous-réseau publique de l'infrastructure
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnetCIDR:
        Description: L'adresse IP du sous-réseau publique de l'infrastructure
        Type: String
        Default: 10.0.2.0/24

    AMItoUse:
        Description: Identifiant de l'image ami
        Type: String
        Default: ami-09a41e26df464c548 # ami of debian image
    
    KeyToUse:
        Description: Clé d'authentification SSH
        Type: String
        Default: ansible-test

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} InternetGateway
    
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PublicSubnetCIDR
            MapPublicIpOnLaunch: "true"
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production PublicSubnet

    PrivateSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PrivateSubnetCIDR
            MapPublicIpOnLaunch: "true"
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Production PrivateSubnet

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} PublicRouteTable
    PublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet

    PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} PrivateRouteTable

    PrivateSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
          RouteTableId: !Ref PrivateRouteTable
          SubnetId: !Ref PrivateSubnet

    PrivateRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
####################################
    WebServerSecGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Allow http to our hosts and SSH from local only
            VpcId: !Ref VPC
            SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 80
                ToPort: 80
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
            SecurityGroupEgress:
              - IpProtocol: -1
                FromPort: -1
                ToPort: -1
                CidrIp: 0.0.0.0/0
    WebServerInstance:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: !Ref AMItoUse
            KeyName: !Ref KeyToUse
            InstanceType: t2.micro
            SecurityGroupIds: 
              - !Ref WebServerSecGroup
            SubnetId: !Ref PrivateSubnet
            BlockDeviceMappings:
              - DeviceName: /dev/sdm
                Ebs:
                    VolumeType: gp2
                    DeleteOnTermination: "true"
                    VolumeSize: 10

Outputs:
    WebServerInstance:
        Description: A reference to the created Instance
        Value: !join ["" , ["http://" , {!GetAtt [WebServerInstance, PublicDnsName]}]]
        Export:
            Name: WebServer-DNSNAME #!Sub ${EnvironmentName}-WebServer-DNSNAME
